@@ -1,3 +1,9 @@
+Mon Mar  1 21:40:59 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>
+
+        * performance-tests/Bench/src/StatisticalValue.h:
+
+          Remove a compiler warning.
+
 Fri Feb 26 16:25:07 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * docs/html/multicast/multicast.html:
